# awrust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
config/: config.example.toml  config.toml.example
crates/cc-core/: Cargo.toml
crates/cc-core/examples/: README.md  basic_config.rs  graceful_shutdown.rs  http_client.rs  mysql_connect.rs  redis_connect.rs
crates/cc-core/src/: config.rs  error.rs  http.rs  lib.rs  mysql.rs  redis.rs  shutdown.rs  tracing.rs
crates/cc-core/src/config/: mod.rs  mysql.rs  redis.rs  tracing.rs
