[package]
name = "cc-core"
version = "0.3.0"
edition = "2021"
description = "A core library for configuration, MySQL and Redis connection management"
license = "MIT"
repository = "https://github.com/gitcn99/awrust"
readme = "../../README.md"
keywords = ["config", "mysql", "redis", "database"]
categories = ["database", "config"]

[features]
default = ["mysql", "redis", "config-toml"]
mysql = ["dep:sqlx", "sqlx/mysql"]
redis = ["dep:redis"]
config-toml = ["dep:toml"]
config-yaml = ["dep:yaml_serde"]
config-json = ["dep:serde_json"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
yaml_serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }


[[example]]
name = "basic_config"
path = "examples/basic_config.rs"

[[example]]
name = "mysql_connect"
path = "examples/mysql_connect.rs"
required-features = ["mysql"]

[[example]]
name = "redis_connect"
path = "examples/redis_connect.rs"
required-features = ["redis"]
